# haskell-ttn-dashboard

./: .gitignore  README.md  app.nix  default.nix  fastbuild  shell.nix  site.css  ttn-client.nix  ttn-dashboard.cabal
client/: Main.hs  Old.hs  default.nix
messages/: cs.msg  cz.msg  en.msg  sk.msg
server/: Main.hs  Ws.hs  default.nix
shared/: Common.hs  Gateways.hs  Messages.hs
